# uav-bounded-blackout-reproducibility

./: .gitignore  CITATION.cff  DATA_SOURCES.md  LICENSE  LICENSE_PENDING.md  README.md  pyproject.toml  requirements.txt
experiments/: __init__.py  experiment_utils.py  run_ablation_study.py  run_literature_profile_robustness.py  run_phase_perturbation_study.py  run_protocol_parameter_sensitivity.py  run_public_measurement_profile.py  run_public_trace_calibration.py  run_q1_simulation_suite.py  run_reference_comparison.py  run_scalability_study.py  run_sensitivity_studies.py  run_small_exact_benchmark.py  run_statistical_checks.py  run_task_driven_gap_checks.py  run_uncertainty_robustness.py  scenario_variants.py
results/: ablation_experiment_2026-07-18.csv  ablation_experiment_2026-07-18.md  adhoc_multiscenario_raw_2026-07-18.csv  adhoc_multiscenario_summary_2026-07-18.csv  adhoc_multiscenario_summary_2026-07-18.md  k10_reality_check_summary_2026-07-18.csv  literature_profile_metric_checks_raw_2026-07-18.csv  literature_profile_metric_checks_summary_2026-07-18.csv  literature_profile_multiscenario_raw_2026-07-18.csv  literature_profile_multiscenario_summary_2026-07-18.csv  literature_profile_robustness_2026-07-18.md  literature_profile_table_2026-07-18.csv  phase_perturbation_2026-07-18.md  phase_perturbation_raw_2026-07-18.csv  phase_perturbation_summary_2026-07-18.csv  protocol_parameter_sensitivity_2026-07-18.csv  protocol_parameter_sensitivity_2026-07-18.md  public_measurement_metric_checks_raw_2026-07-18.csv  public_measurement_metric_checks_summary_2026-07-18.csv  (+30 more)
(+11 files in other folders)
