[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-bounded-blackout-reproducibility"
version = "0.1.0"
description = "Reproducibility package for public measurement-trace calibrated bounded-blackout UAV-IoT routing experiments."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
