[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-bounded-blackout-reproducibility"
version = "0.2.0"
description = "Reproducibility package for protocol-aware bounded-blackout UAV-IoT routing experiments."
requires-python = ">=3.10"
dependencies = []
license = "MIT"

[tool.setuptools.packages.find]
where = ["src"]
